--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,16 @@
     "description": "PHP script that can be used as a proxy",
     "require": {
         "guzzlehttp/guzzle": "^6.2",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "react/http": "^0.4.1"
     },
     "require-dev": {
         "raveren/kint": "^1.0"
+    },
+    "autoload": {
+      "psr-4": {
+        "phproxy\\": "src/"
+      }
     },
     "license": "GPL3",
     "authors": [
